// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps demos > demo: Basic 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Clickable 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: CustomizedProgressDot 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Error 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-error ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="close" class="anticon anticon-close"><svg focusable="false" class="" data-icon="close" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Process
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Icon 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="user" class="anticon anticon-user"><svg focusable="false" class="" data-icon="user" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Login
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="solution" class="anticon anticon-solution"><svg focusable="false" class="" data-icon="solution" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M688 264c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48zm-8 136H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM480 544H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 308H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm356.8-74.4c29-26.3 47.2-64.3 47.2-106.6 0-79.5-64.5-144-144-144s-144 64.5-144 144c0 42.3 18.2 80.3 47.2 106.6-57 32.5-96.2 92.7-99.2 162.1-.2 4.5 3.5 8.3 8 8.3h48.1c4.2 0 7.7-3.3 8-7.6C564 871.2 621.7 816 692 816s128 55.2 131.9 124.4c.2 4.2 3.7 7.6 8 7.6H880c4.6 0 8.2-3.8 8-8.3-2.9-69.5-42.2-129.6-99.2-162.1zM692 591c44.2 0 80 35.8 80 80s-35.8 80-80 80-80-35.8-80-80 35.8-80 80-80z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Verification
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="loading" class="anticon anticon-loading"><svg focusable="false" class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="0 0 1024 1024"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Pay
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="smile" class="anticon anticon-smile"><svg focusable="false" class="" data-icon="smile" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Done
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Inline 1`] = `
"<div style="display: flex; flex-direction: column; gap: 24px;">
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 1</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-inline" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 2</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-inline" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-error ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="close" class="anticon anticon-close"><svg focusable="false" class="" data-icon="close" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 3</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-inline" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 4</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-inline" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: LabelPlacement 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Nav 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1<span class="ant-steps-item-subtitle">00:00:05</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2<span class="ant-steps-item-subtitle">00:01:02</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3<span class="ant-steps-item-subtitle">waiting for longlong time</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-steps ant-steps-horizontal ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 4
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">finish 1
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">finish 2
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">current process
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled" aria-disabled="true">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">wait
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Progress 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: ProgressDot 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-dot" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical ant-steps-dot" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon ant-steps-icon-dot"></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Simple 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Small 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: SmallSize 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: StepNext 1`] = `
"<div data-v-31fbda4a="">
  <div data-v-31fbda4a="" class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">First
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Second
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Last
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-31fbda4a="" class="steps-content">First-content</div>
  <div data-v-31fbda4a="" class="steps-action"><button data-v-31fbda4a="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <transition-stub appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub><span class="ant-btn-content">Next</span>
    </button>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`Steps demos > demo: Vertical 1`] = `
"<div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: VerticalSmall 1`] = `
"<div class="ant-steps ant-steps-vertical ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;
